@@ -1,1 +1,1 @@
-#define luatex_svn_revision 7388
+#define luatex_svn_revision 7389
